# slang-native-playground

./: .gitignore  Cargo.toml  README.md  build.rs  compiled.ron  index.html  rand_float_compiled.ron
.cargo/: config.toml
examples/: Cargo.toml  cube_raster.rs  cube_raster.slang  free_flight_camera.rs  free_flight_camera.slang  index.html  painting.slang
examples/examples/: annotation.rs  annotation.slang  circle.rs  circle.slang  cube_raster.rs  free_flight_camera.rs  free_flight_camera.slang  painting.rs  painting.slang  simple_print.rs  simple_print.slang
examples/examples/annotation/: main.rs
examples/examples/painting/: main.rs  utils.slang
examples/examples/simple_print/: main.rs
examples/painting/: main.rs  user.slang
examples/src/: lib.rs
examples/voxels/: binding.slang  common.slang  main.rs  render.slang  user.slang  voxel_update.slang  worldgen.slang
shaders/: imageMain.slang  playground.slang  printMain.slang  user.slang
slang-compiler-type-definitions/: Cargo.toml
slang-compiler-type-definitions/src/: lib.rs
slang-debug-app/: Cargo.toml
slang-debug-app/src/: lib.rs
slang-playground-compiler/: Cargo.toml
slang-playground-compiler/src/: controllers.rs  lib.rs  resource_commands.rs  slang_compile.rs  uniform_controllers.rs
slang-renderer/: Cargo.toml
slang-renderer/src/: compute_pipeline.rs  lib.rs
slang-shader-macros/: Cargo.toml
slang-shader-macros/shaders/: imageMain.slang  playground.slang  printing.slang  rendering.slang
slang-shader-macros/src/: lib.rs  slang_compiler.rs
src/: compute_pipeline.rs  draw_pipeline.rs  graphics_pipeline.rs  lib.rs  main.rs  passThrough.wgsl  slang_compiler.rs
src/shaders/: playground.slang
