[package]
name = "slang-native-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
pollster = "0.4.0"
wgpu = { version = "24.0.0", features = ["serde"] }
winit = "0.30.9"
bytemuck = "1.21.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.9.0"
flume = "0.11.1"
web-time = "1.1.0"
futures = "0.3.31"
slang-playground-compiler = { path = "slang-playground-compiler" }
slang-shader-macros = { path = "slang-shader-macros" }

[dependencies.egui-winit]
version = "0.31.1"
# Required for compiling to WASM
default-features = false
features = ["links", "wayland", "x11"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-wgpu = "0.31.0"
egui = "0.31.0"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "d6ca412" }
