[workspace]
members = [
    "examples",
    "slang-debug-app",
    "slang-playground-compiler",
    "slang-renderer",
    "slang-shader-macros",
]
resolver = "3"

[workspace.dependencies]
env_logger = "0.11.6"
pollster = "0.4.0"
wgpu = { version = "25.0.0", features = ["serde"] }
winit = "0.30.12"
bytemuck = "1.23.2"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.10.1"
flume = "0.11.1"
web-time = "1.1.0"
futures = "0.3.31"
egui-winit = { version = "0.32.0", default-features = false, features = [
    "links",
    "wayland",
    "x11",
] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
egui-wgpu = "0.32.0"
egui = "0.32.0"
typetag = "0.2.20"
slang-reflector = { git = "https://github.com/Devon7925/slang-reflector.git" }
url = "2.5.2"
strum = { version = "0.26.3", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
image = "0.25.6"
tobj = "4.0.3"
rand = "0.9.1"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
base64 = "0.22.1"
serde_json = "1.0.140"
slang-debug-app = { path = "slang-debug-app" }
slang-playground-compiler = { path = "slang-playground-compiler" }
slang-renderer = { path = "slang-renderer" }
slang-shader-macros = { path = "slang-shader-macros" }
