[package]
name = "slang-debug-app"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
egui-wgpu = { workspace = true }
egui = { workspace = true }
web-time = { workspace = true }
pollster = { workspace = true }
slang-playground-compiler = { workspace = true }
slang-renderer = { workspace = true }
egui-winit = { workspace = true }