[package]
name = "slang-playground-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
wgpu = { workspace = true }
typetag = { workspace = true }
bytemuck = { workspace = true }
winit = { workspace = true }
web-time = { workspace = true }
slang-reflector = { workspace = true, optional = true }
url = { workspace = true }
strum = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
image = { workspace = true }
tobj = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui = { workspace = true }

[features]
compilation = ["dep:slang-reflector"]