[package]
name = "slang-shader-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ron = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
wgpu = { version = "24.0.0", features = ["serde"] }
base64 = "0.22.1"
serde_json = "1.0"
slang-playground-compiler = { path = "../slang-playground-compiler" }
