[package]
name = "slang-shader-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
wgpu = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
slang-playground-compiler = { workspace = true, features = ["compilation"]}


[features]
default = []
compilation = []